8252921: NMT overwrite memory type for region assert when building dynamic archive

Reviewed-by: minqi, iklam, dholmes